# PyPv

./: README.md  coverage.json  pyproject.toml  setup.py
json/: pv_inverters.json  pv_modules.json
models/: land_type.py  pv_inverter.py  pv_module.py
pypv/: __init__.py
services/: average_energy_generation.py  inverter_setting.py  module_setting.py  solar_calc.py  system_creator.py
tests/: test_system_creator.py
