[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "pypv"
version = "0.1.0"
description = "pypv is a state-of-the-art Python library designed to empower engineers and developers in the field of solar energy. This library simplifies the use of complex physical models, making it easier to calculate key solar parameters and optimize solar energy systems."
readme = "file: README.md"
author = "Patrick Pasquini"
author_email = "contatopasquini@gmail.com"
url = "https://github.com/patrickpasquini/pypv"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = "photovoltaic, pv panel, pv inverter, mppt, pv-calculator"


[tool.black]
line-length = 88
target-version = ['py38']